@@ -12,19 +12,40 @@ config EXAMPLES_NETTEST
 
 if EXAMPLES_NETTEST
 
+config EXAMPLES_NETTEST_LOOPBACK
+	bool "Loopback test"
+	default n
+	depends on NET_LOOPBACK
+	---help---
+		Perform the test using the local loopback device.  In this case,
+		both the client and the server reside on the target.
+
+if EXAMPLES_NETTEST_LOOPBACK
+
+config EXAMPLES_NETTEST_STACKSIZE
+	int "Server stack size"
+	default 2048
+
+config EXAMPLES_NETTEST_PRIORITY
+	int "Server priority"
+	default 100
+
+endif # EXAMPLES_NETTEST_LOOPBACK
+
 config EXAMPLES_NETTEST_SERVER
 	bool "Target is server"
 	default n
+	depends on !EXAMPLES_NETTEST_LOOPBACK
 	---help---
-	Select to use the host as the client side of the test.  Default:  The
-	target is the client side of the test
+		Select to use the host as the client side of the test.  Default:  The
+		target is the client side of the test
 
 config EXAMPLES_NETTEST_PERFORMANCE
 	bool "Test for Performance"
 	default n
 	---help---
-	Configure the example to test for network performance.  Default:  Test
-	is for network functionality.
+		Configure the example to test for network performance.  Default:  Test
+		is for network functionality.
 
 choice
 	prompt "IP Domain"
@@ -45,7 +66,7 @@ config EXAMPLES_NETTEST_INIT
 	bool "Initialize network"
 	default n if NSH_BUILTIN_APPS
 	default y if !NSH_BUILTIN_APPS
-	depends on !BUILD_KERNEL
+	depends on !BUILD_KERNEL && !EXAMPLES_NETTEST_LOOPBACK
 	---help---
 		Include logic to initialize the network.  This should not be done if
 		the network is already initialized when nettest runs.  This is
@@ -77,6 +98,8 @@ config EXAMPLES_NETTEST_NETMASK
 
 endif # EXAMPLES_NETTEST_INIT
 
+if !EXAMPLES_NETTEST_LOOPBACK
+
 config EXAMPLES_NETTEST_CLIENTIP
 	hex "Client IP Address"
 	default 0x0a000001 if !EXAMPLES_NETTEST_SERVER
@@ -89,6 +112,7 @@ config EXAMPLES_NETTEST_CLIENTIP
 		host PC IP address (possibly the gateway address,
 		EXAMPLES_NETTEST_DRIPADDR?).
 
+endif # !EXAMPLES_NETTEST_LOOPBACK
 endif # EXAMPLES_NETTEST_IPv4
 
 if EXAMPLES_NETTEST_IPv6
@@ -345,6 +369,8 @@ config EXAMPLES_NETTEST_IPv6NETMASK_8
 endif # NET_ICMPv6_AUTOCONF
 endif # EXAMPLES_NETTEST_INIT
 
+if !EXAMPLES_NETTEST_LOOPBACK
+
 comment "Client IPv6 address"
 
 config EXAMPLES_NETTEST_CLIENTIPv6ADDR_1
@@ -476,5 +502,6 @@ config EXAMPLES_NETTEST_CLIENTIPv6ADDR_8
 		values forming the full IP address must be specified individually.
 		This is the last of the 8-values.
 
+endif # !EXAMPLES_NETTEST_LOOPBACK
 endif # EXAMPLES_NETTEST_IPv6
 endif # EXAMPLES_NETTEST
