@@ -106,6 +106,16 @@ void send_client(void)
   myaddr.sin6_family            = AF_INET6;
   myaddr.sin6_port              = HTONS(PORTNO);
 
+#ifdef CONFIG_EXAMPLES_NETTEST_LOOPBACK
+  myaddr.sin6_addr.s6_addr16[0] = 0;
+  myaddr.sin6_addr.s6_addr16[1] = 0;
+  myaddr.sin6_addr.s6_addr16[2] = 0;
+  myaddr.sin6_addr.s6_addr16[3] = 0;
+  myaddr.sin6_addr.s6_addr16[4] = 0;
+  myaddr.sin6_addr.s6_addr16[5] = 0;
+  myaddr.sin6_addr.s6_addr16[6] = 0;
+  myaddr.sin6_addr.s6_addr16[7] = HTONS(1);
+#else
   myaddr.sin6_addr.s6_addr16[0] = HTONS(CONFIG_EXAMPLES_NETTEST_CLIENTIPv6ADDR_1);
   myaddr.sin6_addr.s6_addr16[1] = HTONS(CONFIG_EXAMPLES_NETTEST_CLIENTIPv6ADDR_2);
   myaddr.sin6_addr.s6_addr16[2] = HTONS(CONFIG_EXAMPLES_NETTEST_CLIENTIPv6ADDR_3);
@@ -114,12 +124,18 @@ void send_client(void)
   myaddr.sin6_addr.s6_addr16[5] = HTONS(CONFIG_EXAMPLES_NETTEST_CLIENTIPv6ADDR_6);
   myaddr.sin6_addr.s6_addr16[6] = HTONS(CONFIG_EXAMPLES_NETTEST_CLIENTIPv6ADDR_7);
   myaddr.sin6_addr.s6_addr16[7] = HTONS(CONFIG_EXAMPLES_NETTEST_CLIENTIPv6ADDR_8);
+#endif
 
   addrlen = sizeof(struct sockaddr_in6);
 #else
   myaddr.sin_family             = AF_INET;
   myaddr.sin_port               = HTONS(PORTNO);
+
+#ifdef CONFIG_EXAMPLES_NETTEST_LOOPBACK
+  myaddr.sin_addr.s_addr        = HTONL(0x7f000001);
+#else
   myaddr.sin_addr.s_addr        = HTONL(CONFIG_EXAMPLES_NETTEST_CLIENTIP);
+#endif
 
   addrlen = sizeof(struct sockaddr_in);
 #endif
